# CollabTracker

./: .replit  app.py  models.py  predictive_analytics.py  pyproject.toml  replit.nix  routes.py  seed_data.py  seed_opportunities.py  socket_events.py
static/css/: custom.css
static/js/: analytics.js  dashboard.js  pipeline.js  search.js  websocket.js
templates/: advanced_search.html  analytics.html  base.html  company_detail.html  company_form.html  dashboard.html  documents.html  pipeline.html
