[project]
name = "repl-nix-collabtracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-mail>=0.10.0",
    "python-magic>=0.4.27",
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "xlsxwriter>=3.2.0",
    "openpyxl>=3.1.5",
    "reportlab",
]
